JDK 16 compatibility (#411)